IMPALA-10762: ASAN tests fail with use-after-poison in HdfsParquetScanner::FindSkipRangesForPagesWithMinMaxFilters

This patch addresses the ASAN test failure caused by an out of
boundary access.

Testing
  1). Ran TestOverlapMinMaxFilters successfully with ASAN build

Change-Id: I97c43571d771805834577a0f03d476e24c82b82b
Reviewed-on: http://gerrit.cloudera.org:8080/17630
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>